# differentiable_eo

./: .gitignore  optimize_constellation.py  pyproject.toml
diagrams/: graph.drawio
differentiable_eo/: __init__.py  config.py  constants.py  constraints.py  coordinates.py  coverage.py  globe.py  objective.py  optimize.py  tle_utils.py  visualization.py
experiments/: exp0_hyperparam_tuning.py  exp0_valid_combos.txt  exp1_gradient_validation.py  exp1_walker_recovery.py  exp1_walker_recovery_minimax.py  exp2_walker_recovery.py  exp3_data.pt  exp3_loss_landscape.py  exp3_sweep.py  exp3_weighted_europe.py  exp3b_augmentation.py  exp3c_single_sat.py  gen_globe_figures.py  hail_mary.py  hail_mary2.py  render_globe_blender.py
paper/: references.bib  relaxed_eo.bib  template.aux  template.bbl  template.blg  template.fdb_latexmk  template.fls  template.out  template.tex
paper/figures/: pipeline.tex  relaxations.tex
paper/sections/: appendix.tex  conclusion.tex  experiments.tex  introduction.tex  method.tex  related_work.tex
plots/: fig2_relaxations.py
